# VRtuosCompanionApp

Companion_nix/: meson.build  resources.qrc
Companion_nix/inc/: ConnectForm.hh
Companion_nix/src/: ConnectForm.cpp  RtMidi.cpp  main.cpp
Companion_nix/ui/: ConnectForm.ui
VRtuos Companion App/: VRtuos Companion App.sln
VRtuos Companion App/VRtuosCompanionApp/: Form1.Designer.cs  Form1.cs
